--- a/practice-ui/package.json
+++ b/practice-ui/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "interview-prep-backend",
-  "version": "1.0.0",
-  "description": "Backend API for Interview Preparation Platform",
-  "main": "server.js",
+  "name": "interview-prep-platform",
+  "version": "2.0.0",
+  "description": "Interview Preparation Platform with Cloud Sync",
+  "main": "index.html",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
+    "dev": "netlify dev",
+    "build": "echo 'No build step required for static site'",
+    "deploy": "netlify deploy --prod",
     "test": "jest",
     "lint": "eslint .",
     "format": "prettier --write ."
   },
-  "keywords": ["interview", "preparation", "qa", "automation", "api"],
+  "keywords": ["interview", "preparation", "qa", "automation", "study", "tracker"],
   "author": "Interview Prep Team",
   "license": "MIT",
   "dependencies": {
+    "@netlify/blobs": "^7.3.0",
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
@@ -32,6 +35,7 @@
     "socket.io": "^4.7.4"
   },
   "devDependencies": {
+    "netlify-cli": "^17.15.0",
     "nodemon": "^3.0.2",
     "jest": "^29.7.0",
     "supertest": "^6.3.3",
